--- a/package.json
+++ b/package.json
@@ -10,36 +10,51 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
-    "typegen": "wrangler types"
+    "typegen": "wrangler types",
+    "drizzle:generate": "drizzle-kit generate",
+    "drizzle:REGENERATE": "rm -rf ./drizzle && drizzle-kit generate",
+    "drizzle:up": "drizzle-kit up",
+    "drizzle:check": "drizzle-kit check",
+    "drizzle:drop": "drizzle-kit drop",
+    "d1:migrate:list": "wrangler d1 migrations list d1-local --local",
+    "d1:migrate:apply": "wrangler d1 migrations apply d1-local --local",
+    "d1:reset": "tsx app/d1-reset.ts",
+    "d1:seed": "wrangler d1 execute d1-local --file=./app/seed.sql --local"
   },
   "dependencies": {
+    "@paddle/paddle-node-sdk": "^1.4.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@remix-run/cloudflare": "^2.10.1",
     "@remix-run/cloudflare-pages": "^2.10.1",
     "@remix-run/react": "^2.10.1",
-    "isbot": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "drizzle-orm": "^0.31.2",
+    "isbot": "^5.1.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240512.0",
+    "@cloudflare/workers-types": "^4.20240620.0",
     "@remix-run/dev": "^2.10.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
+    "drizzle-kit": "^0.22.8",
+    "eslint": "^9.6.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "3.57.1"
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
+    "vite-tsconfig-paths": "^4.3.2",
+    "wrangler": "3.63.0",
+    "zx": "^8.1.3"
   },
   "engines": {
     "node": ">=20.0.0"
