--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.3",
+    "typescript": "5.4.5",
     "vite": "^5.3.3",
     "vite-tsconfig-paths": "^4.3.2",
     "wrangler": "3.63.0",
