--- a/functions/app/package.json
+++ b/functions/app/package.json
@@ -30,7 +30,8 @@
     "drizzle-orm": "^0.31.2",
     "isbot": "^5.1.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@repo/shared": "workspace:*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240620.0",
