--- a/functions/app/package.json
+++ b/functions/app/package.json
@@ -1,12 +1,15 @@
 {
   "name": "app",
   "private": true,
-  "sideEffects": false,
+  "sideEffects": [
+    "*.css"
+  ],
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
     "deploy": "wrangler pages deploy ./build/client",
     "dev": "remix vite:dev",
+    "clean": "rm -rf node_modules",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
@@ -27,7 +30,7 @@
     "@remix-run/cloudflare": "^2.10.1",
     "@remix-run/cloudflare-pages": "^2.10.1",
     "@remix-run/react": "^2.10.1",
-    "drizzle-orm": "^0.31.2",
+    "drizzle-orm": "*",
     "isbot": "^5.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -39,7 +42,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.22.8",
+    "drizzle-kit": "0.22.8",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
