--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+      "clean": "rm -rf node_modules && pnpm -r clean",
       "format": "prettier --write .",
       "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint ."
     },
@@ -15,6 +16,7 @@
       "@eslint/compat": "^1.1.0",
       "@eslint/js": "^9.5.0",
       "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+      "drizzle-orm": "0.31.2",
       "eslint": "9.x",
       "eslint-config-prettier": "^9.1.0",
       "eslint-plugin-react": "^7.34.3",
